--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -38,3 +38,13 @@
     text-decoration: none;
     color: #1389BF;
 }
+.time{
+    display: none;
+    margin-left: 85px;
+}
+
+@media only screen and (min-width: 600px){
+    .time{
+        display: initial;
+        }
+}
