reconverted blue-Button component to be reusable, its now called button.component and added to excercise.component

--- a/src/components/excercise/excercise.styles.scss
+++ b/src/components/excercise/excercise.styles.scss
@@ -50,3 +50,11 @@
     align-self: flex-end;
 }
 
+.yellow{
+    --button-secondary-color-dark: #f5c608;
+    --button-secondary-color: #f7cd2a;
+    --button-secondary-color-light: white;
+    --button-secondary-color-hover: #f7cd2a;
+    --button-secondary-color-active: #f7cd2a;
+    --button-secondary-border: 2px solid #f7cd2a;
+}
