--- a/src/components/excercise/excercise.styles.scss
+++ b/src/components/excercise/excercise.styles.scss
@@ -50,3 +50,11 @@
     align-self: flex-end;
 }
 
+.yellow{
+    --button-secondary-color-dark: #1389BF;
+    --button-secondary-color: #1389BF;
+    --button-secondary-color-light: white;
+    --button-secondary-color-hover: #1389BF;
+    --button-secondary-color-active: #1389BF;
+    --button-secondary-border: 2px solid #1389BF;
+}
